Prepare Release: OpenRewrite-Plugin