@@ -19,7 +19,6 @@ import static de.cuioss.test.generator.Generators.fixedValues;
 
 import java.io.File;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
 import de.cuioss.test.generator.TypedGenerator;
 import de.cuioss.tools.net.ssl.KeyStoreProvider;
@@ -29,7 +28,7 @@ public class KeyStoreInfoGenerator implements TypedGenerator<KeyStoreProvider> {
 
     static final String PASSWORD = "initinit";
 
-    static final Path BASE_PATH = Paths.get("src/test/resources");
+    static final Path BASE_PATH = Path.of("src/test/resources");
 
     private final TypedGenerator<File> keystores = fixedValues(BASE_PATH.resolve("keystore1.keystore").toFile(),
             BASE_PATH.resolve("keystore2.keystore").toFile());
