@@ -18,13 +18,13 @@ package de.cuioss.portal.core.test.tests;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
-import java.nio.file.Paths;
-
 import jakarta.enterprise.inject.spi.BeanManager;
 
 import org.jboss.weld.environment.se.Weld;
 import org.jboss.weld.environment.se.WeldContainer;
 import org.junit.jupiter.api.Test;
+
+import java.nio.file.Path;
 
 /**
  * Base class for testing the consistency / structure of a certain module by
@@ -58,7 +58,7 @@ public class BaseModuleConsistencyTest {
 
     @Test
     protected void moduleShouldProvideBeansXml() {
-        assertTrue(Paths.get("src", "main", "resources", "META-INF", "beans.xml").toFile().exists(),
+        assertTrue(Path.of("src", "main", "resources", "META-INF", "beans.xml").toFile().exists(),
                 "It is best-practice that each module provides a beans.xml");
     }
 
