@@ -206,7 +206,7 @@ public abstract class AbstractConfigurationKeyVerifierTest {
             return strings;
         }
         var foundNames = StreamSupport.stream(ConfigProvider.getConfig().getConfigSources().spliterator(), false).map(ConfigSource::getName).collect(Collectors.toSet());
-        fail(String.format("Unable to find any configuration source named '%s', available sources: '%s'", name, foundNames));
+        fail("Unable to find any configuration source named '%s', available sources: '%s'".formatted(name, foundNames));
 
         return null;
     }
